# adk-workshop

./: .gitignore  README.md
chat-ui/: .env.example  DEPLOY.md  Dockerfile  README.md  SUMMARY.md  cloudbuild-custom-sa.yaml  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
movie-script/: Readme.md
movie-script/movie-script/: agent.py
simple-agent/: ADK_with_Agent_Engine.ipynb  Tutorial.ipynb
travel-concierge/: README.md  pyproject.toml
travel-concierge/deployment/: deploy.py
weather-agent/: .env.example  Agent Engine Tutorial.ipynb  Agent_開発基礎版(天気Agent).ipynb  README.md  Tutorial.ipynb  example.py  pyproject.toml
weather-agent/deployment/: .env.example  README.md  deploy.py  example_deploy.py
weather-agent/examples/: multi_model_example.py
weather-agent/tests/: deploy_test.py
weather-agent/tutorial/: Agent_Development.ipynb
weather-agent/weather_agent/: __init__.py  agent.py  prompt.py
weather-agent/weather_agent/shared_libraries/: __init__.py  callbacks.py
weather-agent/weather_agent/sub_agents/: __init__.py
weather-agent/weather_agent/sub_agents/farewell/: __init__.py  agent.py
weather-agent/weather_agent/sub_agents/greeting/: __init__.py  agent.py
weather-agent/weather_agent/tools/: __init__.py  conversation.py  weather.py
