[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-ui"
version = "0.1.0"
description = "A chat UI application"
readme = "README.md"  # You might want to create this file too
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.30.0",
    "google-cloud-aiplatform[agent_engines]>=1.95.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3"
]

[project.urls]
"Homepage" = "https://example.com" # Replace with actual URL if available
"Bug Tracker" = "https://example.com/issues" # Replace with actual URL if available